# vcf-tool

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  HowToRun.md  Makefile  README.md  vcpkg.json
apps/vcf_tool/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
data/: test.vcf
docs/: DEV_SETUP.md
src/core/: CMakeLists.txt
src/core/include/vcf_tool/core/: Config.h  Core.h  MongoConfig.h  MongoDatabase.h  ThreadPool.h
src/core/src/: MongoDatabase.cpp  ThreadPool.cpp
src/domain/: CMakeLists.txt
src/domain/include/vcf_tool/domain/: VcfTool.h  VcfToolBuilder.h  greeting.h
src/domain/src/: Queues.h  greeting.cpp
src/domain/src/api/: VcfTool.cpp  VcfToolBuilder.cpp
src/domain/src/dao/: VcfDao.cpp  VcfDao.h  VcfSchema.h
src/domain/src/entity/: ParsedRecord.h  RawLine.h  VcfRecord.h
src/domain/src/parser/: NaiveLineParser.cpp  NaiveLineParser.h  SimpleParserService.cpp  SimpleParserService.h  VcfLineParser.cpp  VcfLineParser.h
src/domain/src/pipeline/: Context.cpp  Context.h  Pipeline.cpp  Pipeline.h
src/domain/src/reader/: FileLineReaderWorker.cpp  FileLineReaderWorker.h
src/domain/src/writer/: DbWriterWorker.cpp  DbWriterWorker.h
src/utils/: CMakeLists.txt
src/utils/include/vcf_tool/utils/: Errors.h  Logger.h  Utils.h
src/utils/src/format/: Format.h
src/utils/src/json/: Json.h
src/utils/src/logging/: Logger.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_greeting.cpp
